adding congregations handler, repository, and models (Jemaat)
